--- a/recipe_scaler.html
+++ b/recipe_scaler.html
@@ -365,6 +365,160 @@
         margin: 0;
       }
     }
+    /* --- スマホ専用レイアウト --- */
+    body.is-mobile #footer-nav {
+      position: fixed;
+      left: 0; right: 0; bottom: 0;
+      z-index: 100;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      background: #fff;
+      border-top: 1px solid #e0e0e0;
+      box-shadow: 0 -2px 8px rgba(0,0,0,0.04);
+      padding: 0;
+      margin: 0;
+      height: 54px;
+    }
+    body.is-mobile #footer-nav button {
+      flex: 1 1 0;
+      min-width: 0;
+      margin: 0;
+      border-radius: 0;
+      background: none;
+      color: #2980b9;
+      font-size: 0.98em;
+      padding: 0;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      box-shadow: none;
+    }
+    body.is-mobile #footer-nav button.active {
+      color: #3498db;
+      font-weight: bold;
+      border-top: 2px solid #3498db;
+      background: #f0f8ff;
+    }
+    body.is-mobile #footer-nav button span {
+      font-size: 1.3em;
+      display: block;
+      line-height: 1.1;
+    }
+    body.is-mobile {
+      padding-bottom: 60px !important;
+    }
+    body.is-mobile #view-edit > button,
+    body.is-mobile #view-shopping > button,
+    body.is-mobile #view-saved > button {
+      display: block;
+      width: 100%;
+      min-width: 0;
+      font-size: 1em;
+      padding: 8px 0;
+      margin: 0 0 8px 0;
+      border-radius: 8px;
+    }
+    body.is-mobile #view-edit,
+    body.is-mobile #view-shopping,
+    body.is-mobile #view-saved {
+      padding: 0 2px;
+    }
+    body.is-mobile button,
+    body.is-mobile input[type="text"],
+    body.is-mobile input[type="number"],
+    body.is-mobile select {
+      font-size: 1.08em;
+      padding: 8px 0;
+      margin: 6px 0;
+      width: 100%;
+      min-width: 0;
+      box-sizing: border-box;
+    }
+    body.is-mobile .recipe,
+    body.is-mobile #shopping-list,
+    body.is-mobile .saved-item {
+      padding: 10px 6px;
+      margin-bottom: 20px;
+    }
+    body.is-mobile h1,
+    body.is-mobile h2 {
+      font-size: 1.15em;
+      margin: 10px 0 8px 0;
+    }
+    body.is-mobile table,
+    body.is-mobile thead,
+    body.is-mobile tbody,
+    body.is-mobile th,
+    body.is-mobile td,
+    body.is-mobile tr {
+      display: block;
+      width: 100%;
+    }
+    body.is-mobile thead {
+      display: none;
+    }
+    body.is-mobile tr {
+      margin-bottom: 18px;
+      border-bottom: 2px solid #eee;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.03);
+      padding: 8px 0;
+    }
+    body.is-mobile td {
+      padding: 8px 0 8px 40%;
+      position: relative;
+      min-height: 36px;
+      border: none;
+      border-bottom: 1px solid #f0f0f0;
+    }
+    body.is-mobile td:last-child {
+      border-bottom: none;
+    }
+    body.is-mobile td::before {
+      position: absolute;
+      left: 8px;
+      top: 8px;
+      width: 38%;
+      font-weight: bold;
+      color: #888;
+      font-size: 0.98em;
+      white-space: nowrap;
+    }
+    body.is-mobile .recipe table tbody tr td:nth-child(1)::before { content: '食材'; }
+    body.is-mobile .recipe table tbody tr td:nth-child(2)::before { content: '元の分量'; }
+    body.is-mobile .recipe table tbody tr td:nth-child(3)::before { content: '単位'; }
+    body.is-mobile .recipe table tbody tr td:nth-child(4)::before { content: '変換後'; }
+    body.is-mobile .recipe table tbody tr td:nth-child(5)::before { content: '削除'; }
+    body.is-mobile #shopping-list tbody tr td:nth-child(1)::before { content: '食材'; }
+    body.is-mobile #shopping-list tbody tr td:nth-child(2)::before { content: '合計量'; }
+    body.is-mobile #shopping-list tbody tr td:nth-child(3)::before { content: '単位'; }
+    body.is-mobile .saved-item {
+      flex-direction: column;
+      align-items: stretch;
+      gap: 6px;
+      padding: 8px 2px;
+    }
+    body.is-mobile .saved-item button {
+      width: 100%;
+      margin: 4px 0;
+    }
+    body.is-mobile #saved-list {
+      margin-bottom: 20px;
+    }
+    body.is-mobile #saved-for-shopping {
+      padding: 8px 2px;
+    }
+    body.is-mobile #recipes,
+    body.is-mobile #shopping-list,
+    body.is-mobile #saved-list {
+      margin: 0;
+    }
   </style>
 </head>
 <body>
@@ -682,6 +836,18 @@
       a.remove();
     }
     window.exportAll = exportAll;
+
+    // スマホ判定（ユーザーエージェントベース）
+    function isMobileDevice() {
+      if (navigator.userAgentData && typeof navigator.userAgentData.mobile === 'boolean') {
+        return navigator.userAgentData.mobile;
+      }
+      const ua = navigator.userAgent || '';
+      return /iPhone|Android.*Mobile|Windows Phone|iPod|BlackBerry|IEMobile|Opera Mini/i.test(ua);
+    }
+    if (isMobileDevice()) {
+      document.body.classList.add('is-mobile');
+    }
     </script>
   </body>
 </html>
