--- a/recipe_scaler.html
+++ b/recipe_scaler.html
@@ -25,21 +25,113 @@
       margin: 0.8rem 0 0.6rem 0;
     }
 
+    /* --- ボタン共通 --- */
+    .button-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.4rem;
+      margin-bottom: 1rem;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
+    .button-row.center {
+      justify-content: flex-start;
+    }
     button {
       background-color: #3498db;
       border: none;
       color: white;
       padding: 0.5rem 1rem;
-      margin: 0.25rem 0.25rem 0.6rem 0;
       border-radius: 0.5rem;
       cursor: pointer;
       transition: background-color 0.3s;
-      font-size: 1.1rem;
-      min-height: 2.5rem;
+      font-size: 1.05rem;
+      min-width: unset;
+      min-height: 2.2rem;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.3em;
+      white-space: nowrap;
+      font-weight: 500;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.04);
     }
-
+    button .icon {
+      font-size: 1.1em;
+      display: inline-flex;
+      align-items: center;
+      margin-right: 0.2em;
+    }
+    button:only-child .icon {
+      margin-right: 0;
+    }
     button:hover {
       background-color: #2980b9;
+    }
+    @media (max-width: 600px) {
+      .button-row {
+        flex-direction: column;
+        gap: 0.2rem;
+        align-items: stretch;
+      }
+      button {
+        width: 100%;
+        font-size: 1rem;
+        padding: 0.7rem 0.5rem;
+        min-width: 0;
+      }
+    }
+    @media (max-width: 430px) {
+      button {
+        font-size: 0.98rem;
+        padding: 0.5rem 0.3rem;
+      }
+    }
+
+    /* --- フッター型ナビは従来のまま --- */
+    #footer-nav {
+      position: fixed;
+      left: 0; right: 0; bottom: 0;
+      z-index: 100;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      background: #fff;
+      border-top: 1px solid #e0e0e0;
+      box-shadow: 0 -2px 8px rgba(0,0,0,0.04);
+      padding: 0;
+      margin: 0;
+      height: 54px;
+    }
+    #footer-nav button {
+      flex: 1 1 0;
+      min-width: 0;
+      margin: 0;
+      border-radius: 0;
+      background: none;
+      color: #2980b9;
+      font-size: 1em;
+      padding: 0;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      box-shadow: none;
+      gap: 0.1em;
+      white-space: nowrap;
+    }
+    #footer-nav button.active {
+      color: #3498db;
+      font-weight: bold;
+      border-top: 2px solid #3498db;
+      background: #f0f8ff;
+    }
+    #footer-nav button span {
+      font-size: 1.3em;
+      display: block;
+      line-height: 1.1;
     }
 
     input[type="text"], input[type="number"], select {
@@ -330,17 +422,23 @@
     </nav>
     <div id="view-edit">
       <h1>レシピスケーラー</h1>
-      <button onclick="addRecipe()">＋レシピを追加</button>
-      <button onclick="scaleAll()">📏 全レシピ変換</button>
-      <button onclick="saveToSlot()">💾 日付で保存</button>
-      <button onclick="clearAll()">🧹 すべてクリア</button>
+      <div class="button-row center">
+        <button onclick="addRecipe()"><span class="icon">＋</span>レシピを追加</button>
+        <button onclick="scaleAll()"><span class="icon">📏</span>全レシピ変換</button>
+      </div>
+      <div class="button-row">
+        <button onclick="saveToSlot()"><span class="icon">💾</span>日付で保存</button>
+        <button onclick="clearAll()"><span class="icon">🧹</span>すべてクリア</button>
+      </div>
       <div id="recipes"></div>
     </div>
     <div id="view-shopping" style="display:none">
       <h2>🛒 買い物リスト（合計量）</h2>
-      <button onclick="scaleAll()">再計算</button>
-      <input type="text" id="search-saved" placeholder="保存済みレシピ検索" oninput="filterSavedForShopping()" style="margin:8px 0;width:60%">
-      <button onclick="showSavedForShopping()">保存済みデータから追加</button>
+      <div class="button-row">
+        <button onclick="scaleAll()">再計算</button>
+        <input type="text" id="search-saved" placeholder="保存済みレシピ検索" oninput="filterSavedForShopping()" style="margin:8px 0;width:60%">
+        <button onclick="showSavedForShopping()">保存済みデータから追加</button>
+      </div>
       <div id="saved-for-shopping" style="display:none;background:#f9f9f9;padding:10px;border-radius:8px;margin-bottom:10px;"></div>
       <table id="shopping-list">
         <thead><tr><th>食材</th><th>合計量</th><th>単位</th></tr></thead>
@@ -349,9 +447,11 @@
     </div>
     <div id="view-saved" style="display:none">
       <h2>📂 保存済みデータ</h2>
-      <button onclick="exportAll()">📤 エクスポート</button>
-      <label class="file-label">📥 インポート<input type="file" onchange="importAll(event)" /></label>
-      <button onclick="alert('将来的に対応予定です')">レシピサイトからインポート（準備中）</button>
+      <div class="button-row">
+        <button onclick="exportAll()"><span class="icon">📤</span>エクスポート</button>
+        <label class="file-label"><span class="icon">📥</span>インポート<input type="file" onchange="importAll(event)" /></label>
+        <button onclick="alert('将来的に対応予定です')">レシピサイトからインポート（準備中）</button>
+      </div>
       <div id="saved-list"></div>
     </div>
     <script>
